# homeproc

./: README.md  pyproject.toml  setup.cfg  setup.py
homeproc/: common.py
homeproc/common/: __init__.py  graphing.py  python.py
homeproc/dvs/: __init__.py  dvsproc.py
homeproc/ide/: __init__.py  ideproc.py
homeproc/qcm/: __init__.py  equations.py  traceproc.py
homeproc/xrd/: __init__.py  eos.py  parseM41.py  parsePCR.py  plot.py
