[metadata]
name = homeproc
version = 0.0.2
license = MIT
license_file = LICENSE
description = Scripts for processing of data files
author = Paul Iacomi
author_email = mail@pauliacomi.com
url = https://github.com/pauliacomi/homeproc
# Classifier list at https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    ruptures
    matplotlib
    plotly
    psutil
    tqdm

[options.package_data]
* = *.txt, *.rst
